# fw-codesign-eoc-2022

./: .gitignore  CMakeLists.txt  README.md  design_questions.drawio
.devcontainer/: devcontainer.json
containers/: Dockerfile
project/: CMakeLists.txt
project/component/: CMakeLists.txt
project/component/src/: secret_impl.v
project/firmware/: CMakeLists.txt
project/firmware/src/: main.cpp  top.v
